<resources>
    <string name="app_name">DSU App</string>
    <string name="dayananda_sagar_university">Dayananda Sagar University</string>
    <string name="Signup_text">Sign Up</string>
    <string name="login_text">Log In</string>
    <string name="college_des">Dayananda Sagar Institutions founded in the 60s by one such visionary, late Sri Dayananda Sagar committed to take knowledge to the people, transforms today’s students into responsible citizens and professional leaders of tomorrow. Dayananda Sagar University created by an Act of the Karnataka State in 2014, built on this adorable legacy and inspired by its own milestones, meeting the needs of quality higher education in this part of the world.</string>
    <string name="login_instead">Login Instead</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="usn">USN</string>
    <string name="full_name">Full Name</string>
    <string name="year_of_study">Year of study</string>
    <string name="dsu_logo">Dsu Logo</string>
    <string name="notice_board">Notice Board</string>
    <string name="time_tabe">Time Tabe</string>
    <string name="attendance">Attendance</string>
    <string name="subject_resources">Subject Resources</string>
    <string name="academic_calendar">Academic Calendar</string>
    <string name="faculty_details">Faculty Details</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="time_table">Time Table</string>
    <string name="enter_your_section">Enter your section</string>
    <string name="jeevan_kumar_a_das">Jeevan Kumar A Das</string>
    <string name="ishika_giroti">Ishika Giroti</string>
    <string name="eng19cs0123_cse">ENG19CS0123, CSE</string>
    <string name="eng19cs0128_cse">ENG19CS0128, CSE</string>
    <string name="contact_information">Contact Information</string>
    <string name="jeevan_contact_details">Email: jeevanadas@gmail.com\nLinkedin: jeevanadas\nGithub: JeevanADas</string>
    <string name="ishika_contact_details">Email: igiroti1@gmail.com\nLinkedin: ishikagiroti\nGithub: IshikaGiroti</string>
    <string name="enter_the_year">Enter the year</string>
    a

</resources>